# blackout

./: .gitignore  flake.nix
.west/: config
application/: .clangd  CMakeLists.txt  Kconfig  Kconfig.sysbuild  prj.conf  prj_release.conf  sysbuild_internal.conf  west.yml
application/boards/: nrf52840dk_nrf52840.overlay  nrf5340dk_nrf5340_cpuapp.overlay  nrf54l15dk_nrf54l15_cpuapp.overlay  nrf54l15tag_nrf54l15_cpuapp.conf  nrf54l15tag_nrf54l15_cpuapp.overlay  nrf54lm20dk_nrf54lm20a_cpuapp.overlay  nrf54lm20dk_nrf54lm20b_cpuapp_internal.overlay
application/src/: app_task.cpp  app_task.h  main.cpp  zcl_callbacks.cpp
application/src/zap/: blackout_blinds.matter  blackout_blinds.zap
application/src/zap/zap-generated/: IMClusterCommandHandler.cpp  PluginApplicationCallbacks.h  access.h  callback-stub.cpp  endpoint_config.h  gen_config.h
application/sysbuild/ipc_radio/: prj.conf  prj_release.conf
application/sysbuild/ipc_radio/boards/: nrf5340dk_nrf5340_cpunet.conf
application/sysbuild/mcuboot/: prj.conf
application/sysbuild/mcuboot/boards/: nrf5340dk_nrf5340_cpuapp.overlay  nrf54l15dk_nrf54l15_cpuapp.conf  nrf54l15dk_nrf54l15_cpuapp.overlay  nrf54l15tag_nrf54l15_cpuapp.conf  nrf54l15tag_nrf54l15_cpuapp.overlay  nrf54lm20dk_nrf54lm20a_cpuapp.overlay  nrf54lm20dk_nrf54lm20a_cpuapp_internal.conf  nrf54lm20dk_nrf54lm20a_cpuapp_internal.overlay  nrf54lm20dk_nrf54lm20b_cpuapp.conf
